get policy rest api
